--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
      padding: 20px;
      color: white;
 }
+ .text-input-hidden {
+         display: none;
+    }
+     .menu {
+         display: block;
+         position: absolute;
+         top: 13px !important;
+    }
  .App-title {
      font-size: 1.5em;
 }
@@ -73,12 +81,14 @@
      color: white;
      line-height: 2cm;
 }
- .menu {
-     display: none;
-}
+ 
  .error {
      color: red;
 }
+ .hamburger-icon {
+         width: 45px;
+         fill: rgb(0, 0, 0);
+    }
  @media screen and (max-width: 800px) {
      .text-input-hidden {
          display: none;
@@ -98,7 +108,7 @@
     }
      .hamburger-icon {
          width: 45px;
-         fill: #E0E0E0;
+         fill: rgb(0, 0, 0);
     }
      .map {
          width: 100%;
@@ -108,6 +118,10 @@
      .heading {
          font-size: medium;
          padding: 1em;
+    }
+	 .hamburger-icon {
+         width: 25px;
+         fill: rgb(0, 0, 0);
     }
      .menu {
          top: 0!important;
